add context and refactor